--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       display: flex;
       justify-content: center;
       align-items: center;
-      background: url('https://scontent.fosm2-1.fna.fbcdn.net/v/t1.6435-9/131889987_2808875602659062_2760721262457737306_n.jpg?_nc_cat=110&ccb=1-7&_nc_sid=a5f93a&_nc_ohc=cDRg_-iwjh8Q7kNvwEd0ZMf&_nc_oc=AdkkRbDU13Cyv2uOPaNQiwpyGJT-znZhZoRkdICdhmg-fzsweEEID3z2xvFrkg9PtjU&_nc_zt=23&_nc_ht=scontent.fosm2-1.fna&_nc_gid=on_jqhbI_QgTpnmYqR-_uQ&oh=00_Afd1KoBRHmT3CqGGnVNIwojb7fMeOQE91p_mejg0DCt60w&oe=690FB0D6') no-repeat center center/cover;
+      background: url('img/zana.png') no-repeat center center/cover;
       position: relative;
       overflow: hidden;
     }
@@ -105,7 +105,7 @@
 <body>
 
   <div class="container">
-    <img src="https://scontent.fosm2-1.fna.fbcdn.net/v/t1.6435-9/131889987_2808875602659062_2760721262457737306_n.jpg?_nc_cat=110&ccb=1-7&_nc_sid=a5f93a&_nc_ohc=cDRg_-iwjh8Q7kNvwEd0ZMf&_nc_oc=AdkkRbDU13Cyv2uOPaNQiwpyGJT-znZhZoRkdICdhmg-fzsweEEID3z2xvFrkg9PtjU&_nc_zt=23&_nc_ht=scontent.fosm2-1.fna&_nc_gid=on_jqhbI_QgTpnmYqR-_uQ&oh=00_Afd1KoBRHmT3CqGGnVNIwojb7fMeOQE91p_mejg0DCt60w&oe=690FB0D6" alt="Profile Photo" class="profile-pic">
+    <img src="img/zana.png" alt="Profile Photo" class="profile-pic">
 
     <h2>Contact Me</h2>
 
